adicionando ngb e editando estilos e classes

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -64,9 +64,9 @@
                 </g>
             </svg>
         </div>
-        <h1 class="page__title">Busque por serviços e unidades disponibilizados pelo SUS</h1>
+        <h1 class="page__title">Busque por serviços e unidades <br> disponibilizados pelo SUS</h1>
         <!-- <h1>Loren Ipsum</h1> -->
-        <h2 class="search-hint">Tente por exemplo: 
+        <h2 class="search-hint">Termos mais consultados: 
             <div class="search-hint__item">
                 <a routerLink="{{hint.url}}"
                    class="search-hint__link" 
