--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -73,7 +73,7 @@
                    *ngFor="let hint of hints">{{ hint.name }}</a> 
             </div>
         </h2>
-        <div app-search-input></div>
+        <div app-search-term></div>
         
         <!-- <p>termos mais consultadas</p> -->
     </div>
