implementando consulta de localização

--- a/src/app/shared/modals/location/location.component.html
+++ b/src/app/shared/modals/location/location.component.html
@@ -6,7 +6,12 @@
 </div>
 <div class="modal-body">
   <p>Digite a cidade que deseja buscar serviços e unidades</p>
-  <input type="text" class="input" [(ngModel)]="location" placeholder="Ex.: Salvador" (keyup.enter)="changeLocation()">
+  <input type="text" class="input" placeholder="Ex.: Salvador" autofocus
+        [(ngModel)]="location"
+        (click)="onFocus($event)"
+        [ngbTypeahead]="changeLocation"
+        [inputFormatter]="formatLocationResult"
+        [resultFormatter]="formatLocationResult">
   <div class="location-cities" *ngIf="availableCities.length > 0">
     <a class="location-city" *ngFor="let city of availableCities" (click)="setLocation(city)">{{city}}</a>
   </div>
