adicionando typeahead consulta localizacao

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -74,7 +74,7 @@
 						*ngFor="let hint of hints">{{ hint.name }}</a> 
 			</div>
 		</h2>
-		<div app-search-term></div>
+		<app-search-term-form></app-search-term-form>
 		
 		<!-- <p>termos mais consultadas</p> -->
 	</div>
