--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -9,6 +9,7 @@
 @import 'variables';
 @import 'components/button';
 @import 'components/modal';
+@import 'components/typeahead';
 
 
 // @import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700');
