--- a/src/app/shared/search-term-form/search-term-form.component.html
+++ b/src/app/shared/search-term-form/search-term-form.component.html
@@ -2,11 +2,10 @@
   <div class="search-form__input">
     <input type="text" class="input" name="term"
            placeholder="Digite um serviço ou unidade"
-           autofocus
            [(ngModel)]="searchTerm"
-           (keyup.enter)="search()">
+           (keyup.enter)="search()" autofocus>
     <span class="required-field" *ngIf="showRequiredField">Você precisa digitar algo para iniciar a consulta</span>
   </div>
   <app-select-location></app-select-location>
-  <input type="submit" class="button button_primary" (click)="search()" value="Buscar">
+  <input type="submit" class="button button_primary" (click)="search()" value="Buscar" >
 </form>
