--- a/src/app/shared/search-term-form/search-term-form.component.scss
+++ b/src/app/shared/search-term-form/search-term-form.component.scss
@@ -6,6 +6,7 @@
 	font-size: 14px;
 	.input {
 		margin: 0 auto;
+		min-width: 250px;
 	}
 }
 .input {
@@ -19,7 +20,7 @@
 	transition: all ease .2s;
 	letter-spacing: 0.06em;
 	@include input-placeholder {
-		color: #d2d2d2;
+		color: #a5a5a5;
 	}
 	&:focus {
 		padding-left: 25px;
