--- a/src/app/shared/modals/location/location.component.scss
+++ b/src/app/shared/modals/location/location.component.scss
@@ -1,8 +1,37 @@
-.input {
+@import '../../../../assets/styles/variables';
+
+.typeahead {
+	width: 250px;
+	margin: 0 auto;
+	position: relative;
+	.dropdown-menu {
+		overflow: hidden;
+		display: block;
+		border: none;
+		max-height: 35vh;
+		height: auto;
+		box-shadow: 0 5px 10px -2px rgb(216, 216, 216);
+		padding: 0;
+	}
+	.dropdown-item {
+		background: transparent;
+		border: none;
+		width: 100%;
+		cursor: pointer;
+		&:hover {
+			background: $color_primary__hover;
+		}
+		.ngb-highlight {
+			color: $color_primary;
+		}
+	}
+}
+
+.typeahead__input {
 	text-align: center;
 	outline: 0;
 	display: inline-block;
-	min-width: 250px;
+	width: 100%;
 	font-weight: 800;
 	color: #48b9ce;
 	text-decoration: none;
