--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,14 +9,16 @@
 	</div>
 	<div class="page__content">
 		<div class="brand">
-			<svg version="1.1" id="Camada_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-					viewBox="0 0 640 480" style="enable-background:new 0 0 640 480;" xml:space="preserve">
-					<style type="text/css">
-							.st0{fill:#3A3A3A;}
-					</style>
+			<svg version="1.1" id="Camada_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+			 y="0px" viewBox="0 0 640 480" style="enable-background:new 0 0 640 480;" xml:space="preserve">
+				<style type="text/css">
+					.st0 {
+						fill: #3A3A3A;
+					}
+				</style>
+				<g>
 					<g>
-							<g>
-									<path class="st0" d="M393.9,224.8c-1.5-1.3-33.1-1.9-35-1.7c-2,0.2-3.6,1.1-5,2.6c-1.3,1.5-1.9,3.3-1.7,5.3
+						<path class="st0" d="M393.9,224.8c-1.5-1.3-33.1-1.9-35-1.7c-2,0.2-3.6,1.1-5,2.6c-1.3,1.5-1.9,3.3-1.7,5.3
 											c2.7,25.2,3.8,53.7,3.4,85.6c-0.6,31.9-2.6,60.5-5.9,85.7c-2.2,17.1-3.7,27.2-4.3,30.5c-1.5,6-3.1,10.6-4.8,13.9
 											c-1.6,2.9-3.2,4.6-4.6,5.1h-1.9c-1.8,0-3.7-0.1-5.6-0.3c-4.2-0.2-7.4-0.5-9.6-0.9c-13.6-1.9-23.4-7.1-29.5-15.5
 											c-7.9-10.5-12.2-32.5-12.8-66c-0.4-17.7,0.6-42.2,3-73.4c0.6-8.6,0.6-19.7,0-33.3c-0.7-17.7-1.1-28.5-1.1-32.4
@@ -60,22 +62,20 @@
 											c-17.6,0-11.3-66.7,0.3-112.9c-7.3-16-32.5-28.1-37.8-20.1c-5.5,8-26.1,57.2-38.4,99.1l17.3-134.9c-11-11-44.5-15.8-48-7.8
 											c-15.6,35.9-30.1,86-44.9,134.2c5-41.9,10.5-79.7,15.3-111.8c1.8-11.8-7.3-16.3-14.8-16.1l-62.7,1.5c-7,6-7.8,17.3,0.3,16.1
 											l22.7-5C142.2,35.8,144.7,38.3,143.7,47.3z M386.4,109.8c2.8,0,4,2.5,4,8c0,24.3-9.3,43.9-20.1,56.7c-0.3-2-0.3-4.3-0.3-6.8
-											C370.1,126.6,381.9,109.8,386.4,109.8z"/>
-							</g>
+											C370.1,126.6,381.9,109.8,386.4,109.8z" />
 					</g>
+				</g>
 			</svg>
 		</div>
 		<h1 class="page__title">Busque por serviços e unidades <br> disponibilizados pelo SUS</h1>
 		<!-- <h1>Loren Ipsum</h1> -->
-		<h2 class="search-hint">Termos mais consultados: 
+		<app-search-term-form></app-search-term-form>
+		<h2 class="search-hint">Termos mais consultados:
 			<div class="search-hint__item">
-				<a routerLink="{{hint.url}}"
-						class="search-hint__link" 
-						*ngFor="let hint of hints">{{ hint.name }}</a> 
+				<a routerLink="{{hint.url}}" class="search-hint__link" *ngFor="let hint of hints">{{ hint.name }}</a>
 			</div>
 		</h2>
-		<app-search-term-form></app-search-term-form>
-		
+
 		<!-- <p>termos mais consultadas</p> -->
 	</div>
 	<div class="page__bottom-bg"></div>
